CC/TrabalhoVIII/compiladores/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On REPEAT shift to state 30
-- On PRINT shift to state 31
-- On PONTOEVIRGULA shift to state 106
-- On LOCAL shift to state 107
-- On IF shift to state 113
-- On ID shift to state 17
-- On GOTO shift to state 116
-- On FUNCTION shift to state 118
-- On FOR shift to state 131
-- On DOISDOISPONTOS shift to state 141
-- On DO shift to state 144
-- On BREAK shift to state 145
-- On ABREPARENTESE shift to state 36
-- On varlist shift to state 146
-- On var shift to state 149
-- On stat shift to state 156
-- On program shift to state 206
-- On prefixexp shift to state 152
-- On list(stat) shift to state 160
-- On label shift to state 158
-- On functioncall shift to state 159
-- On block shift to state 207
-- On RETURN reduce production list(stat) -> 
-- On EOF reduce production list(stat) -> 

State 1:
stat -> WHILE . exp DO block END [ WHILE UNTIL RETURN REPEAT PRINT PONTOEVIRGULA LOCAL IF ID GOTO FUNCTION FOR EOF END ELSEIF ELSE DOISDOISPONTOS DO BREAK ABREPARENTESE ]
-- On TRUE shift to state 2
-- On TONUMBER shift to state 3
-- On SUBTRACAO shift to state 10
-- On STRING shift to state 11
-- On QUADRADO shift to state 12
-- On PONTOPONTOPONTO shift to state 13
-- On NOT shift to state 14
-- On NIL shift to state 15
-- On INT shift to state 16
-- On ID shift to state 17
-- On FUNCTION shift to state 18
-- On FLOAT shift to state 34
-- On FALSE shift to state 35
-- On ABREPARENTESE shift to state 36
-- On ABRECHAVES shift to state 37
-- On var shift to state 40
-- On unop shift to state 41
-- On tableconstructor shift to state 42
-- On prefixexp shift to state 43
-- On functiondef shift to state 51
-- On functioncall shift to state 52
-- On exp shift to state 202

State 2:
exp -> TRUE . [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On WHILE reduce production exp -> TRUE 
-- On VIRGULA reduce production exp -> TRUE 
-- On UNTIL reduce production exp -> TRUE 
-- On THEN reduce production exp -> TRUE 
-- On SUBTRACAO reduce production exp -> TRUE 
-- On SOMA reduce production exp -> TRUE 
-- On RETURN reduce production exp -> TRUE 
-- On REPEAT reduce production exp -> TRUE 
-- On PRINT reduce production exp -> TRUE 
-- On PONTOPONTO reduce production exp -> TRUE 
-- On PONTOEVIRGULA reduce production exp -> TRUE 
-- On OR reduce production exp -> TRUE 
-- On MULTIPLICACAO reduce production exp -> TRUE 
-- On MODULO reduce production exp -> TRUE 
-- On MENORIGUAL reduce production exp -> TRUE 
-- On MENOR reduce production exp -> TRUE 
-- On MAIORIGUAL reduce production exp -> TRUE 
-- On MAIOR reduce production exp -> TRUE 
-- On LOCAL reduce production exp -> TRUE 
-- On IGUALDADE reduce production exp -> TRUE 
-- On IF reduce production exp -> TRUE 
-- On ID reduce production exp -> TRUE 
-- On GOTO reduce production exp -> TRUE 
-- On FUNCTION reduce production exp -> TRUE 
-- On FOR reduce production exp -> TRUE 
-- On FECHAPARENTESE reduce production exp -> TRUE 
-- On FECHACOLCHETE reduce production exp -> TRUE 
-- On FECHACHAVES reduce production exp -> TRUE 
-- On EXPONENCIACAO reduce production exp -> TRUE 
-- On EOF reduce production exp -> TRUE 
-- On END reduce production exp -> TRUE 
-- On ELSEIF reduce production exp -> TRUE 
-- On ELSE reduce production exp -> TRUE 
-- On DOISDOISPONTOS reduce production exp -> TRUE 
-- On DO reduce production exp -> TRUE 
-- On DIVISAO reduce production exp -> TRUE 
-- On DIFERENTE reduce production exp -> TRUE 
-- On BREAK reduce production exp -> TRUE 
-- On AND reduce production exp -> TRUE 
-- On ABREPARENTESE reduce production exp -> TRUE 

State 3:
exp -> TONUMBER . ABREPARENTESE read FECHAPARENTESE [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On ABREPARENTESE shift to state 4

State 4:
exp -> TONUMBER ABREPARENTESE . read FECHAPARENTESE [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On READ shift to state 5
-- On read shift to state 8

State 5:
read -> READ . ABREPARENTESE FECHAPARENTESE [ FECHAPARENTESE ]
-- On ABREPARENTESE shift to state 6

State 6:
read -> READ ABREPARENTESE . FECHAPARENTESE [ FECHAPARENTESE ]
-- On FECHAPARENTESE shift to state 7

State 7:
read -> READ ABREPARENTESE FECHAPARENTESE . [ FECHAPARENTESE ]
-- On FECHAPARENTESE reduce production read -> READ ABREPARENTESE FECHAPARENTESE 

State 8:
exp -> TONUMBER ABREPARENTESE read . FECHAPARENTESE [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On FECHAPARENTESE shift to state 9

State 9:
exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE . [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On WHILE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On VIRGULA reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On UNTIL reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On THEN reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On SUBTRACAO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On SOMA reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On RETURN reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On REPEAT reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On PRINT reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On PONTOPONTO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On PONTOEVIRGULA reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On OR reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MULTIPLICACAO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MODULO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MENORIGUAL reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MENOR reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MAIORIGUAL reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On MAIOR reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On LOCAL reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On IGUALDADE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On IF reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On ID reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On GOTO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On FUNCTION reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On FOR reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On FECHAPARENTESE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On FECHACOLCHETE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On FECHACHAVES reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On EXPONENCIACAO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On EOF reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On END reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On ELSEIF reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On ELSE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On DOISDOISPONTOS reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On DO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On DIVISAO reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On DIFERENTE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On BREAK reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On AND reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 
-- On ABREPARENTESE reduce production exp -> TONUMBER ABREPARENTESE read FECHAPARENTESE 

State 10:
unop -> SUBTRACAO . [ TRUE TONUMBER SUBTRACAO STRING QUADRADO PONTOPONTOPONTO NOT NIL INT ID FUNCTION FLOAT FALSE ABREPARENTESE ABRECHAVES ]
-- On TRUE reduce production unop -> SUBTRACAO 
-- On TONUMBER reduce production unop -> SUBTRACAO 
-- On SUBTRACAO reduce production unop -> SUBTRACAO 
-- On STRING reduce production unop -> SUBTRACAO 
-- On QUADRADO reduce production unop -> SUBTRACAO 
-- On PONTOPONTOPONTO reduce production unop -> SUBTRACAO 
-- On NOT reduce production unop -> SUBTRACAO 
-- On NIL reduce production unop -> SUBTRACAO 
-- On INT reduce production unop -> SUBTRACAO 
-- On ID reduce production unop -> SUBTRACAO 
-- On FUNCTION reduce production unop -> SUBTRACAO 
-- On FLOAT reduce production unop -> SUBTRACAO 
-- On FALSE reduce production unop -> SUBTRACAO 
-- On ABREPARENTESE reduce production unop -> SUBTRACAO 
-- On ABRECHAVES reduce production unop -> SUBTRACAO 

State 11:
exp -> STRING . [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On WHILE reduce production exp -> STRING 
-- On VIRGULA reduce production exp -> STRING 
-- On UNTIL reduce production exp -> STRING 
-- On THEN reduce production exp -> STRING 
-- On SUBTRACAO reduce production exp -> STRING 
-- On SOMA reduce production exp -> STRING 
-- On RETURN reduce production exp -> STRING 
-- On REPEAT reduce production exp -> STRING 
-- On PRINT reduce production exp -> STRING 
-- On PONTOPONTO reduce production exp -> STRING 
-- On PONTOEVIRGULA reduce production exp -> STRING 
-- On OR reduce production exp -> STRING 
-- On MULTIPLICACAO reduce production exp -> STRING 
-- On MODULO reduce production exp -> STRING 
-- On MENORIGUAL reduce production exp -> STRING 
-- On MENOR reduce production exp -> STRING 
-- On MAIORIGUAL reduce production exp -> STRING 
-- On MAIOR reduce production exp -> STRING 
-- On LOCAL reduce production exp -> STRING 
-- On IGUALDADE reduce production exp -> STRING 
-- On IF reduce production exp -> STRING 
-- On ID reduce production exp -> STRING 
-- On GOTO reduce production exp -> STRING 
-- On FUNCTION reduce production exp -> STRING 
-- On FOR reduce production exp -> STRING 
-- On FECHAPARENTESE reduce production exp -> STRING 
-- On FECHACOLCHETE reduce production exp -> STRING 
-- On FECHACHAVES reduce production exp -> STRING 
-- On EXPONENCIACAO reduce production exp -> STRING 
-- On EOF reduce production exp -> STRING 
-- On END reduce production exp -> STRING 
-- On ELSEIF reduce production exp -> STRING 
-- On ELSE reduce production exp -> STRING 
-- On DOISDOISPONTOS reduce production exp -> STRING 
-- On DO reduce production exp -> STRING 
-- On DIVISAO reduce production exp -> STRING 
-- On DIFERENTE reduce production exp -> STRING 
-- On BREAK reduce production exp -> STRING 
-- On AND reduce production exp -> STRING 
-- On ABREPARENTESE reduce production exp -> STRING 

State 12:
unop -> QUADRADO . [ TRUE TONUMBER SUBTRACAO STRING QUADRADO PONTOPONTOPONTO NOT NIL INT ID FUNCTION FLOAT FALSE ABREPARENTESE ABRECHAVES ]
-- On TRUE reduce production unop -> QUADRADO 
-- On TONUMBER reduce production unop -> QUADRADO 
-- On SUBTRACAO reduce production unop -> QUADRADO 
-- On STRING reduce production unop -> QUADRADO 
-- On QUADRADO reduce production unop -> QUADRADO 
-- On PONTOPONTOPONTO reduce production unop -> QUADRADO 
-- On NOT reduce production unop -> QUADRADO 
-- On NIL reduce production unop -> QUADRADO 
-- On INT reduce production unop -> QUADRADO 
-- On ID reduce production unop -> QUADRADO 
-- On FUNCTION reduce production unop -> QUADRADO 
-- On FLOAT reduce production unop -> QUADRADO 
-- On FALSE reduce production unop -> QUADRADO 
-- On ABREPARENTESE reduce production unop -> QUADRADO 
-- On ABRECHAVES reduce production unop -> QUADRADO 

State 13:
exp -> PONTOPONTOPONTO . [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On WHILE reduce production exp -> PONTOPONTOPONTO 
-- On VIRGULA reduce production exp -> PONTOPONTOPONTO 
-- On UNTIL reduce production exp -> PONTOPONTOPONTO 
-- On THEN reduce production exp -> PONTOPONTOPONTO 
-- On SUBTRACAO reduce production exp -> PONTOPONTOPONTO 
-- On SOMA reduce production exp -> PONTOPONTOPONTO 
-- On RETURN reduce production exp -> PONTOPONTOPONTO 
-- On REPEAT reduce production exp -> PONTOPONTOPONTO 
-- On PRINT reduce production exp -> PONTOPONTOPONTO 
-- On PONTOPONTO reduce production exp -> PONTOPONTOPONTO 
-- On PONTOEVIRGULA reduce production exp -> PONTOPONTOPONTO 
-- On OR reduce production exp -> PONTOPONTOPONTO 
-- On MULTIPLICACAO reduce production exp -> PONTOPONTOPONTO 
-- On MODULO reduce production exp -> PONTOPONTOPONTO 
-- On MENORIGUAL reduce production exp -> PONTOPONTOPONTO 
-- On MENOR reduce production exp -> PONTOPONTOPONTO 
-- On MAIORIGUAL reduce production exp -> PONTOPONTOPONTO 
-- On MAIOR reduce production exp -> PONTOPONTOPONTO 
-- On LOCAL reduce production exp -> PONTOPONTOPONTO 
-- On IGUALDADE reduce production exp -> PONTOPONTOPONTO 
-- On IF reduce production exp -> PONTOPONTOPONTO 
-- On ID reduce production exp -> PONTOPONTOPONTO 
-- On GOTO reduce production exp -> PONTOPONTOPONTO 
-- On FUNCTION reduce production exp -> PONTOPONTOPONTO 
-- On FOR reduce production exp -> PONTOPONTOPONTO 
-- On FECHAPARENTESE reduce production exp -> PONTOPONTOPONTO 
-- On FECHACOLCHETE reduce production exp -> PONTOPONTOPONTO 
-- On FECHACHAVES reduce production exp -> PONTOPONTOPONTO 
-- On EXPONENCIACAO reduce production exp -> PONTOPONTOPONTO 
-- On EOF reduce production exp -> PONTOPONTOPONTO 
-- On END reduce production exp -> PONTOPONTOPONTO 
-- On ELSEIF reduce production exp -> PONTOPONTOPONTO 
-- On ELSE reduce production exp -> PONTOPONTOPONTO 
-- On DOISDOISPONTOS reduce production exp -> PONTOPONTOPONTO 
-- On DO reduce production exp -> PONTOPONTOPONTO 
-- On DIVISAO reduce production exp -> PONTOPONTOPONTO 
-- On DIFERENTE reduce production exp -> PONTOPONTOPONTO 
-- On BREAK reduce production exp -> PONTOPONTOPONTO 
-- On AND reduce production exp -> PONTOPONTOPONTO 
-- On ABREPARENTESE reduce production exp -> PONTOPONTOPONTO 

State 14:
unop -> NOT . [ TRUE TONUMBER SUBTRACAO STRING QUADRADO PONTOPONTOPONTO NOT NIL INT ID FUNCTION FLOAT FALSE ABREPARENTESE ABRECHAVES ]
-- On TRUE reduce production unop -> NOT 
-- On TONUMBER reduce production unop -> NOT 
-- On SUBTRACAO reduce production unop -> NOT 
-- On STRING reduce production unop -> NOT 
-- On QUADRADO reduce production unop -> NOT 
-- On PONTOPONTOPONTO reduce production unop -> NOT 
-- On NOT reduce production unop -> NOT 
-- On NIL reduce production unop -> NOT 
-- On INT reduce production unop -> NOT 
-- On ID reduce production unop -> NOT 
-- On FUNCTION reduce production unop -> NOT 
-- On FLOAT reduce production unop -> NOT 
-- On FALSE reduce production unop -> NOT 
-- On ABREPARENTESE reduce production unop -> NOT 
-- On ABRECHAVES reduce production unop -> NOT 

State 15:
exp -> NIL . [ WHILE VIRGULA UNTIL THEN SUBTRACAO SOMA RETURN REPEAT PRINT PONTOPONTO PONTOEVIRGULA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR LOCAL IGUALDADE IF ID GOTO FUNCTION FOR FECHAPARENTESE FECHACOLCHETE FECHACHAVES EXPONENCIACAO EOF END ELSEIF ELSE DOISDOISPONTOS DO DIVISAO DIFERENTE BREAK AND ABREPARENTESE ]
-- On WHILE reduce production exp -> NIL 
-- On VIRGULA reduce production exp -> NIL 
-- On UNTIL reduce production exp -> NIL 
-- On THEN reduce production exp -> NIL 
-- On SUBTRACAO reduce production exp -> NIL 
-- On SOMA reduce production exp -> NIL 
-- On RETURN reduce production exp -> NIL 
-- On REPEAT reduce production exp -> NIL 
-- On PRINT reduce production exp -> NIL 
-- On PONTOPONTO reduce production exp -> NIL 
-- On PONTOEVIRGULA reduce production exp -> NIL 
-- On OR reduce production exp -> NIL 
-- On MULTIPLICACAO reduce production exp -> NIL 
-- On MODULO reduce production exp -> NIL 
-- On MENORIGUAL reduce production exp -> NIL 
-- On MENOR reduce production exp -> NIL 
-- On MAIORIGUAL reduce production exp -> NIL 
-- On MAIOR reduce production exp -> NIL 
-- On LOCAL reduce production exp -> NIL 
-- On IGUALDADE reduce production exp -> NIL 
-- On IF reduce production exp -> NIL 
-- On ID reduce production exp -> NIL 
-- On GOTO reduce production exp -> NIL 
-- On FUNCTION reduce production exp -> NIL 
-- On FOR reduce production exp -> NIL 
-- On FECHAPARENTESE reduce production exp -> NIL 
-- On FECHACOLCHETE reduce production exp -> NIL 
-- On FECHACHAVES reduce production exp -> NIL 
-- On EXPONENCIACAO reduce production exp -> NIL 
-- On EOF reduce production exp -> NIL 
-- On END reduce production exp -> NIL 
-- On ELSEIF reduce production exp -> NIL 
-- On ELSE reduce production exp -> NIL 
-- On DOISDOISPONTOS reduce production exp -> NIL 
-- On DO reduce production exp -> NIL 
-- On DIVISAO reduce production exp -> NIL 
-- On DIFERENTE reduce production exp -> NIL 
-- On BREAK reduce production exp -> NIL 
-- On AND reduce production exp -> NIL 
-- On ABREPARENTESE reduce production exp -> NIL 
